# seaql

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
dbcli/: main.py
dbcli/plugins/: sqlite.py
dbcli/plugins/litecli_pkg/: sqlcompleter.py  sqlexecute.py
scripts/: generate-homebrew-formula.py
seaql/core/: app.py  plugin.py
seaql/plugins/: mysql.py  plotter.py  postgres.py  sqlite.py
tests/: conftest.py  test_backends.py  test_repl.py
