[project]
name = "dbcli"
dynamic = ["version"]
description = "Unified CLI for MySQL (mycli) and PostgreSQL (pgcli) with auto-completion and syntax highlighting."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "dbcli Contributors" }]

dependencies = [
    "mycli >= 1.72.0",
    "pgcli >= 4.4.0",
]

[project.urls]
Homepage = "https://github.com/dbcli/dbcli"

[project.scripts]
dbcli = "dbcli.main:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dbcli*"]

[tool.setuptools_scm]
