[project]
name = "dbcli"
dynamic = ["version"]
description = "Unified CLI for MySQL, PostgreSQL, and SQLite databases."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "dbcli Contributors" }]

dependencies = [
    "click >= 8.3.1, != 8.3.0, < 9",
    "clickdc >= 0.1.1",
    "cryptography >= 46.0.0",
    "Pygments >= 2.19.0",
    "prompt_toolkit >= 3.0.41, < 4.0.0",
    "PyMySQL >= 1.1.2",
    "psycopg >= 3.0.14; sys_platform != 'win32'",
    "psycopg-binary >= 3.0.14; sys_platform == 'win32'",
    "sqlparse >= 0.4.4, < 0.6.0",
    "sqlglot[c] >= 30.7.0",
    "configobj >= 5.0.9",
    "cli_helpers[styles] >= 2.15.0",
    "wcwidth >= 0.6.0",
    "pyperclip >= 1.11.0",
    "pycryptodomex >= 3.23.0",
    "pyfzf >= 0.3.1",
    "rapidfuzz >= 3.14.0",
    "keyring >= 12.2.0",
    "setproctitle >= 1.1.9; sys_platform != 'win32' and 'CYGWIN' not in sys_platform",
    "tzlocal >= 5.2",
    "pgspecial >= 2.0.0",
]

[project.urls]
Homepage = "https://github.com/dbcli/dbcli"

[project.scripts]
dbcli = "dbcli.main:main"

[tool.setuptools.packages.find]
include = ["dbcli*"]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
